# matdevgotod

./: .gitignore
matdevgodot/: export_presets.cfg  icon.svg.import  level1TileSetBackup.tres  main_node_2d.tscn  project.godot
matdevgodot/assets/: Boss1.png.import  square.png.import  square.png~  terrain1.png.import  textureBoss.png.import  textureevolve copie.png.import  textureevolve.png.import  textureevolve2.png.import
matdevgodot/assets/effects/: 2d_lights_and_shadows_neutral_point_light.webp.import
rust/: Cargo.toml
rust/src/: lib.rs  player.rs  player_advanced.rs  tileMapRules.rs  tile_map_rules.rs
