[package]
name = "rust"
version = "0.1.0"
authors = ["Debray Matthieu"]
edition = "2021"
license = "BSD-3-Clause"
# godot v0.1.0 requires 1.78.0 or newer
rust-version = "1.78"
description = "Godot Rust game"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { version = "0.1", features = ["api-4-2"] }
